# pyansys-workflows

./: .gitignore  .pre-commit-config.yaml  AUTHORS  CNAME  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  examples.html  genindex.html  index.html  main.py  objects.inv  pyproject.toml  search.html  searchindex.js  sg_execution_times.html
.ci/: start_mapdl.sh  waiting_services.sh
.github/: CODEOWNERS  dependabot.yml
_sources/: examples.rst.txt  index.rst.txt  sg_execution_times.rst.txt
_static/: search.json
aedt-optislang/: README.rst  dipole_antenna.py  pyaedt_optislang_study.py  requirements_26.1.txt  wf_ao_01_dipole_antenna_optimization.py
doc/: .gitignore  Makefile  make.bat  requirements.txt
fluent-mechanical/: README.rst  requirements_24.1.txt  requirements_24.2.txt  requirements_25.1.txt  requirements_25.2.txt  wf_fm_01_fluent.py  wf_fm_02_mechanical copy.py  wf_fm_02_mechanical.py
geometry-mechanical-dpf/: 01_geometry.py  02_mechanical.py  03_dpf.py  README.rst  requirements_24.1.txt  requirements_24.2.txt  requirements_25.1.txt  requirements_25.2.txt  wf_gmd_01_geometry.py  wf_gmd_02_mechanical.py  wf_gmd_03_dpf.py
geometry-mesh-fluent/: 01_geometry.py  02_fluent_meshing.py  03_fluent_solver.py  README.rst  pipe_pressure.py  pipe_pressure_debug.py  requirements_24.1.txt  requirements_24.2.txt  requirements_25.1.txt  requirements_25.2.txt  (+3 more)
speos-virtual-bsdf-bench/: README.md  main.py  main.spec  pyproject.toml  setup_data.py  speos_worker.py  speos_worker_ori.py  toolfunction.py  vbb-pypeos.py  vbbUI.ui  vbbUIv2.ui  vbbUIv3.ui  vbbui_designer.py
(+224 files in other folders)
