[project]
name = "vbbui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ansys-geometry-core>=0.15.2",
    "ansys-speos-core[graphics]>=0.8.0",
    "ansys-tools-common>=0.4.0",
    "pyside6>=6.10.2",
    "pyvista>=0.46.4",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true
