[project]
name = "vbbui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ansys-geometry-core>=0.15.5",
    "ansys-speos-core[graphics]>=0.9.0",
    "pyside6>=6.11.1",
    "pyvista>=0.47.3",
]


[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
]
